chore[heading]: fix heading size and container padding bottom on mobile

--- a/src/app/components/ResultPanel/ResultPanel.module.scss
+++ b/src/app/components/ResultPanel/ResultPanel.module.scss
@@ -13,5 +13,7 @@
 
   @include mobile {
     padding-top: 2rem;
+    padding-bottom: 5rem;
+  
   }
 }
