--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,6 +2,11 @@
 
 .heading {
   padding: 1rem;
+  text-align: center;
+
+  @include mobile {
+    font-size: 1.2rem;
+  }
 }
 
 .errorContainer {
